# students-management-cplus

./: .gitignore  CMakeLists.txt  LICENSE  README.md  daily_run.sh  run_all.sh
include/: FileHandler.hpp  StatsCalculator.hpp  Student.hpp  StudentManager.hpp
src/: FileHandler.cpp  StatsCalculator.cpp  Student.cpp  StudentManager.cpp  main.cpp
tests/: test_file_handler.cpp  test_stats_calculator.cpp  test_student_manager.cpp
